maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if (checkg()) {gauche(); avance()}
              ^